--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -150,7 +150,7 @@
     @media screen and (max-width: 1024px) {
         flex-wrap: wrap;
     }
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 450px) {
         margin-bottom: 0;
         flex-direction: column;
         align-items: center;
